# p2t-rs

./: .gitignore  Cargo.toml  draw.html
benches/: bench.rs
examples/: draw.rs  stress.rs
src/: advancing_front.rs  context.rs  edge.rs  lib.rs  loader.rs  points.rs  shape.rs  sweeper.rs  triangles.rs  utils.rs
src/advancing_front/: advancing_front.rs  btree_backed.rs  mod.rs  vec_backed.rs
templates/: draw_template.html
