[package]
name = "poly2tri-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1"
imageproc = { version = "0.23", optional = true }
image = { version = "0.24", optional = true }
rusttype = { version = "0.9", optional = true }
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.4", features = ["html_reports"] }
clap = { version = "4.1.8", features = ["derive"] }

[[bench]]
name = "bench"
harness = false

[features]
default = []
draw_base = ["imageproc", "image", "rusttype"]
draw = ["draw_base"]
draw_detail = ["draw_base"]
draw_result = ["draw_base"]
